<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mobile_navigation"
            app:startDestination="@+id/navigation_home">

    <fragment
            android:id="@+id/navigation_home"
            android:name="com.example.tunifywip.ui.home.HomeFragment"
            android:label="@string/title_ukulele"
            tools:layout="@layout/fragment_ukulele"/>

    <fragment
            android:id="@+id/navigation_dashboard"
            android:name="com.example.tunifywip.ui.dashboard.DashboardFragment"
            android:label="@string/title_guitar"
            tools:layout="@layout/fragment_guitar"/>

    <fragment
            android:id="@+id/navigation_notifications"
            android:name="com.example.tunifywip.ui.notifications.NotificationsFragment"
            android:label="@string/title_chromatic"
            tools:layout="@layout/fragment_chromatic"/>
</navigation>