<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools" android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="?attr/actionBarSize">

    <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/nav_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:background="?android:attr/windowBackground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:menu="@menu/bottom_nav_menu"/>

    <fragment
            android:id="@+id/nav_host_fragment_activity_main"
            android:name="androidx.navigation.fragment.NavHostFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:defaultNavHost="true"
            app:layout_constraintBottom_toTopOf="@id/nav_view"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navGraph="@navigation/mobile_navigation"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.0"/>
    <ImageView
            android:layout_width="245dp"
            android:layout_height="279dp" android:id="@+id/rexImg"
            app:srcCompat="@mipmap/ic_rexshadow_foreground"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.497"
            android:layout_marginTop="102dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="1.0"
            android:layout_marginBottom="36dp" android:contentDescription="@string/description_rex"
            app:layout_constraintTop_toBottomOf="@+id/progressBar"/>
    <ImageView
            android:layout_width="89dp"
            android:layout_height="88dp" android:id="@+id/triangleImg"
            app:srcCompat="@drawable/triangle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="472dp"
            android:rotation="180"
            android:contentDescription="@string/description_triangle"/>
    <me.bastanfar.semicirclearcprogressbar.SemiCircleArcProgressBar
            android:layout_width="404dp"
            android:layout_height="237dp"
            app:percent="40"
            app:progressBarColor="#2196F3"
            app:progressPlaceHolderColor="@color/purple_500"
            app:progressBarWidth="50"
            app:progressPlaceHolderWidth="10"
            app:layout_constraintTop_toTopOf="@+id/nav_host_fragment_activity_main"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.545"
            app:layout_constraintBottom_toBottomOf="@+id/nav_view" android:id="@+id/progressBar"
            app:layout_constraintVertical_bias="0.343"/>
    <TextView
            android:layout_width="143dp"
            android:layout_height="126dp" android:id="@+id/toneView"
            app:layout_constraintBottom_toBottomOf="@+id/progressBar"
            app:layout_constraintTop_toTopOf="@+id/progressBar"
            app:layout_constraintStart_toStartOf="@+id/nav_host_fragment_activity_main"
            app:layout_constraintEnd_toEndOf="@+id/nav_host_fragment_activity_main" android:textSize="100sp"
            android:gravity="center" android:textStyle="bold" app:layout_constraintVertical_bias="0.756"/>
    <TextView
            android:layout_width="181dp"
            android:layout_height="47dp" android:id="@+id/freqTitleView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:textSize="34sp"
            android:gravity="center" android:textStyle="bold"
            app:layout_constraintTop_toTopOf="@+id/nav_host_fragment_activity_main"
            app:layout_constraintBottom_toTopOf="@+id/freqView" app:layout_constraintVertical_bias="0.0"
            android:text="@string/title_frequency"
            android:layout_marginBottom="7dp"/>
    <TextView
            android:layout_width="369dp"
            android:layout_height="46dp" android:id="@+id/freqView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:textSize="34sp"
            android:gravity="center" android:textStyle="bold"
            app:layout_constraintTop_toTopOf="@+id/nav_host_fragment_activity_main"
            app:layout_constraintBottom_toTopOf="@+id/triangleImg"
            app:layout_constraintVertical_bias="0.879"/>

</androidx.constraintlayout.widget.ConstraintLayout>